--- a/journal/201904.md
+++ b/journal/201904.md
@@ -132,6 +132,9 @@ Upcoming:
 
 {community efforts: Decred Assembly, websites, etc}
 
+* Old Decred Assembly was [uploaded](https://podcasts.apple.com/podcast/decred-assembly-1-0/id1459062074) to Apple Podcast. Thanks Ryan.
+* "Certified on Binance" {what does it mean? how did it happen? ask s_ben to comment}
+
 {ratings news}
 
 Selected articles:
@@ -169,10 +172,12 @@ Community stats:
 
 Comm systems news:
 
-* Servers hosting matrix.org and riot.im compromised and taken down on Apr 11 for emergency security maintenance, disrupting our communications for several hours. If your homeserver is matrix.org, change your password. Incident report [here](https://matrix.org/blog/2019/04/11/security-incident/), tweet timeline [here](https://twitter.com/matrixdotorg/status/1116304867683905537). Decred's homeserver (matrix.decred.org) was not affected. {clarify with admins}. A good moment to say thanks to our admins who work every day to keep a lot of self-hosted infrastructure running. The incident disrupted our comms for many hours because many people are using the browser Riot.im client which was taken offline. To be resilient against such issues, users should consider installing standalone client (desktop or mobile). Another idea is to [self-host Riot](https://github.com/xaur/decred-issues/issues/62).
+* Servers hosting matrix.org and riot.im compromised and taken down on Apr 11 for emergency security maintenance, disrupting our communications for several hours. If your homeserver is matrix.org, change your password. Incident report [here](https://matrix.org/blog/2019/04/11/security-incident/), tweet timeline [here](https://twitter.com/matrixdotorg/status/1116304867683905537), and [here](https://github.com/matrix-org/matrix.org/issues/371) are recommendations from the hacker to the admins. Decred's homeserver (matrix.decred.org) was not affected. {clarify with admins}. A good moment to say thanks to our admins who work every day to keep a lot of self-hosted infrastructure running. The incident disrupted our comms for many hours because many people are using the browser Riot.im client which was taken offline. To be resilient against such issues, users should consider installing standalone client (desktop or mobile). Another idea is to [self-host Riot](https://github.com/xaur/decred-issues/issues/62).
+* There were multiple interruptions in the bridge and many messages were not delivered from Slack to Matrix between ~Apr 1-15.
 * Matrix is moving to stop supporting self-signed certificates and rely on Certificate Authorities to behave.
 * {someone please comment on how Telegram groups evolve and what interesting is going on}
 * Trivia: did you know there are [12 mods](https://medium.com/decred/decred-independent-contractor-roadmap-884faba3db39) in the Telegram group? {accurate info?}
+* Fake account impersonating as "Decred" were detected on Facebook running giveaways. Stay vigilant.
 
 {selected discussed topics, as bullet list or one paragraph per topic}
 
@@ -198,7 +203,14 @@ voter participation research by @richardred https://twitter.com/RichardRed0x/sta
 
 EOS constitution being replaced by User Agreement by BPs https://medium.com/eos-new-york/the-eos-user-agreement-has-been-proposed-on-chain-61bf3760b604
 
+Ycash "friendly fork" of Zcash https://forum.zcashcommunity.com/t/announcing-ycash-the-first-friendly-fork-of-the-zcash-blockchain/33162
 
+Switzerland e-voting fail now all e-voting is bad https://www.schneier.com/blog/archives/2019/03/critical_flaw_i.html https://boingboing.net/2019/03/13/principal-agent-problems.html
+
+ZRX Treasury stuff
+
+* https://twitter.com/0xProject/status/1116400317191475200
+* https://blog.0xproject.com/0x-roadmap-2019-part-4-proposal-for-stake-based-liquidity-incentive-52c16558df29
 
 {DEX}
 
@@ -209,6 +221,8 @@ QuadrigaCX declared bankrupt after months of uncertainty https://cointelegraph.c
 {other: regulations, security, fun}
 
 anti-anonymity is the main aim https://cointelegraph.com/news/g20-to-establish-crypto-aml-and-counter-terrorism-financing-regulations-in-june-report
+
+https://gadgets.ndtv.com/laptops/news/intel-visa-sa-00086-exploit-researchers-computer-data-access-2014854
 
 When it comes to privacy, New York Times has a good [sense of humor](https://twitter.com/Pinboard/status/1116354502032932865).
 
