--- a/journal/201904.md
+++ b/journal/201904.md
@@ -172,8 +172,17 @@ New merchants:
 
 ## Outreach
 
-{overview of outreach/communications/marketing activity for past month and any short-term plans}
+April was a very busy month coordinating outreach, planning meetups and events, and getting setup on various platforms to begin executing the marketing plan. Anshawblack took admin reign of Decred Aggregator in Telegram, and has been facilitating excellent discussions by sharing quality Decred content. Here’s a brief update on progress of the Marketing Plan approved in Politeia.
 
+Decred Assembly: Dustorf & jy-p did a practice session, then came back two weeks later to tape the first episode of the DA revamp. It was decided rather than record a single show, record segments separately in order to share a greater number of more digestible videos. For April, we filed a Deep Dive with jy-p on the DEX, a Decred Distributed edition with Elian talking about Mexico and LA, and Decred Debunks segment with richardred shooting down Boaty McBoatface and the idea that stakeholders won’t make good decisions. The project needs to reset the YouTube password in order to post these videos on a weekly basis, which we hope to accomplish by the time this is published. The May edition has already been scheduled.
+
+Decred Newsletter: We have decided to use an open-source service, https://www.phplist.org/, which has caused some delay. The construct has been set and tests have been sent successfully. Currently, the design team is building out a template to make it look pretty, and they are working to incorporate a signup link into decred.org. Once that is done, we will share that to get people signed up and we expect to send the first email in May.
+
+Website Updates: The architecture is set and a first draft of the copy is written for most of the additional subpages. Additionally, a second version of copy has been written for the new introductory video, which will be broken into three parts: Secure. Adaptable. Self-Funding. 
+
+Decred in Depth Podcast: anshawblack is traveling to NYC for Blockchain Week beginning on May 11th and plans to record episodes with jy-p, muststopmurad, Joel Monegro, JZ, permabull nino, and Trey Ditto. He will then edit and trickle out the episodes over the coming weeks and months.  
+
+Community Organizers: The volume of Decred meetups and the number of events attended below highlights the success we’ve had mobilizing communities across the world. A meetup guide and tools to execute meetups will be part of the website updates. Until then, assets can be found https://github.com/decred/dcrdesign/releases. A reminder that if you would like a meetup in your neighborhood, start one! Decred community members take the lead on everything, there is no one dictating what happens where, simply community enablement. 
 ## Events
 
 Attended:
