--- a/journal/201912.md
+++ b/journal/201912.md
@@ -4,17 +4,18 @@
 
 _Image: {caption: "$title by $author. $optional-description" for artwork, or just "$description" for photos}_
 
-{introduction, major news of the month ordered by impact, don't put any links here}
+Happy New Year! Decred highlights for December:
 
 - v1.5 final!
-- headercommitments CV progress
-- Happy New Year!
+- headercommitments CV solid progress
 
-## v1.5
+## v1.5 Upgrade Notice
 
 https://github.com/decred/decred-binaries/releases/tag/v1.5.0
 
 https://twitter.com/decredproject/status/1206661133161127936
+
+PoS voters have reached their 75% upgrade threshold and PoW miners are at 89% of the required 95% (as of Jan 8). If you're mining and you haven't upgraded, it is recommended to do it soon to avoid potentially having a block rejected due to being an old version once the threshold is hit. Upgrade and vote progress is shown at [voting.decred.org](https://voting.decred.org/) and more details are at dcrdata's [agendas](https://explorer.dcrdata.org/agendas) page.
 
 {sig check reminder}
 
@@ -22,28 +23,27 @@ https://twitter.com/decredproject/status/1206661133161127936
 
 [dcrd](https://github.com/decred/dcrd):
 
-Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. Checkpoints are now also configurable by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
+Checkpoint logic [simplified](https://github.com/decred/dcrd/pull/2014) to pave the way to support checkpoints based on headers alone. Checkpoints are now also [configurable](https://github.com/decred/dcrd/pull/2013) by the caller. Orphan handling decoupled and [moved](https://github.com/decred/dcrd/pull/2008) from blockchain to block manager. In the bigger picture, these changes will help to decouple the connection code from the download logic, as required for [multi-peer](https://github.com/decred/dcrd/issues/1145) parallel downloading.
 
 Memory usage of conditional execution logic in txscript [optimized](https://github.com/decred/dcrd/pull/2011) by replacing the condition stack with two integers.
 
-Support for bech32 enhanced with convenience functions [added](https://github.com/decred/dcrd/pull/2025) and 
-[ensuring](https://github.com/decred/dcrd/pull/2024) the human-readable part is lowercase to comply with BIP173. 
+Support for bech32 addresses enhanced with convenience functions [added](https://github.com/decred/dcrd/pull/2025) and [ensuring](https://github.com/decred/dcrd/pull/2024) the human-readable part is lowercase to comply with BIP173.
 
 Memory leak [fixed](https://github.com/decred/dcrd/pull/2027) that was especially relevant for setups that involve wallets with a very large number of addresses.
 
 [dcrwallet](https://github.com/decred/dcrwallet): Bug fixes, dependency updates.
 
-createrawtransaction JSON-RPC method [implemented](https://github.com/decred/dcrwallet/pull/1623) directly in dcrwallet so it may be called in SPV syncing mode or when the wallet is not syncing. It was previously only implemented in dcrd and was usable from dcrwallet in RPC syncing mode.
+createrawtransaction method [implemented](https://github.com/decred/dcrwallet/pull/1623) directly in dcrwallet so it may be called in SPV syncing mode or when the wallet is not syncing. It was previously only available in RPC syncing mode and required running a dcrd instance.
 
 txsizes package was [exported](https://github.com/decred/dcrwallet/pull/1573) for reuse by dcrdex and dcrdata.
 
 [Decrediton](https://github.com/decred/decrediton): Bug fixes, dependency upgrades.
 
-Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/decred/decrediton/pull/2362) that could be triggered if the Trezor wallet received funds from a non-dcrwallet sender that did not set the Sequence field of the authored transaction to MaxTxInSequenceNum.
+Numerous bugs squashed, including a bug in [Trezor wallet](https://github.com/decred/decrediton/pull/2362) that could be triggered if the Trezor wallet received funds from a non-dcrwallet sender that did not set the Sequence field properly.
 
 [Politeia](https://github.com/decred/politeia): Backend work to support CMS, bug fixes.
 
-The main focus of Politeia development for December was fixing an issue where [status change](https://github.com/decred/politeia/pull/1073) signature was not saved, and another where [start vote](https://github.com/decred/politeia/pull/1088) signature was only a signature of the proposal token while it should be a signature of the entire Vote structure (which also includes vote params and options). The issues had no impact on users. The fixes are not backwards compatible so they required versioning the metadata. Since versioning of the start vote metadata was required anyway, the latter fix also adds changes that will make supporting [RFP proposals](https://github.com/decred/politeia/issues/966) easier.
+The main focus of Politeia development for December was fixing an issue where [status change](https://github.com/decred/politeia/pull/1073) signature was not saved, and another where [start vote](https://github.com/decred/politeia/pull/1088) signature was only a signature of the proposal token while it should be a signature of the entire Vote structure (which also includes vote params and options). The issues had no impact on users. The fixes are not backwards compatible so they required versioning the metadata. Since versioning of the start vote metadata was required anyway, the second fix also adds changes that will make supporting [RFP proposals](https://github.com/decred/politeia/issues/966) easier.
 
 CMS redesign work is [in progress](https://github.com/decred/politeiagui/pull/1605).
 
@@ -51,9 +51,9 @@ CMS redesign work is [in progress](https://github.com/decred/politeiagui/pull/16
 
 [dcrlnd](https://github.com/decred/dcrlnd):
 
-Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/) { SB: ready to make public? }. Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts.
+Map of the Decred LN on mainnet is [live](https://ln-map.jamieholdstock.com/). Note that while LN has been integrated into Decrediton, it should still be considered as in alpha form. If looking to use LN on mainnet, it is recommended to start on testnet, make sure you're comfortable with operations you want to do on mainnet, and not use large amounts.
 
-Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests more robust. Docker build [added](https://github.com/decred/dcrlnd/pull/67) to Github actions.[Removed namespacing](https://github.com/decred/dcrlnd/pull/68), attention to run upstream code, because some default settings are different. Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate simnet environments with all you need to run a LN cluster.
+Port selection [modified](https://github.com/decred/dcrlnd/pull/62) to make integration tests more robust. Docker build [added](https://github.com/decred/dcrlnd/pull/67) to Github actions. Removed [decred prefix](https://github.com/decred/dcrlnd/pull/68). Work continues on [Docker examples](https://github.com/decred/dcrlnd/pull/66) to automate simnet environments with all you need to run a LN cluster.
 
 [dcrdex](https://github.com/decred/dcrdex):
 
@@ -61,13 +61,13 @@ New components implemented:
 
 - [BTC exchange wallet](https://github.com/decred/dcrdex/pull/72)
 - [client orderbook backend](https://github.com/decred/dcrdex/pull/79)
-- further [integration](https://github.com/decred/dcrdex/pull/85) with the market manager, order router and book routers
+- further [integration](https://github.com/decred/dcrdex/pull/85) between the market manager, order router and book routers
 
 Other changes:
 
 - [order commitments](https://github.com/decred/dcrdex/pull/83) added to spec
 - order timestamp resolution changed from seconds to [milliseconds](https://github.com/decred/dcrdex/pull/96)
-- completed switch to [coin ID](https://github.com/decred/dcrdex/pull/91)
+- completed switch to [coin ID](https://github.com/decred/dcrdex/pull/91), which allows to support more assets in the future
 
 Remaining tasks for the DEX are:
 
@@ -75,47 +75,44 @@ Remaining tasks for the DEX are:
 - on the client: web UI (under review), terminal UI (in draft), DCR wallet (under review), book manager and a persistent database (under review)
 - RPC servers for the server and the client
 
-
 [dcrandroid](https://github.com/decred/dcrandroid):
 
-Major redesign to the user interface to implement [multi-wallet support](https://github.com/decred/dcrandroid/pull/401) (running more than one wallet concurrently) finally merged after many months of work. Most of the Java code was rewritten in Kotlin. All wallets are opened at startup using the same public passphrase. On the backend, multi-wallet support was [added](https://github.com/raedahgroup/dcrlibwallet/pull/57) to dcrlibwallet, which uses a copy of dcrwallet's SPV module to sync all wallets in one process.
+Major redesign of the user interface to implement [multi-wallet support](https://github.com/decred/dcrandroid/pull/401) (running more than one wallet concurrently) finally merged after many months of work. All wallets are opened at startup using the same public passphrase. Most of the Java code was rewritten in Kotlin. On the backend, multi-wallet support was [added](https://github.com/raedahgroup/dcrlibwallet/pull/57) to dcrlibwallet, which uses a copy of dcrwallet's SPV module to sync all wallets in one process.
 
 Other UI improvements include showing progress bar and estimated time remaining when [rescanning](https://github.com/decred/dcrandroid/pull/414) and the QR code scanner gaining the ability to detect [payment amounts](https://github.com/decred/dcrandroid/pull/411).
 
-This month also saw significant security enhancements. Users can now unlock the app with their [fingerprint](https://github.com/decred/dcrandroid/pull/413), and address validation was [moved](https://github.com/decred/dcrandroid/pull/421) to security tools.
+Security enhancements: users can now unlock the app with their [fingerprint](https://github.com/decred/dcrandroid/pull/413), address validation was [moved](https://github.com/decred/dcrandroid/pull/421) to security tools.
 
 [dcrios](https://github.com/raedahgroup/dcrios):
 
-UI enhancements continue with updated [colors](https://github.com/raedahgroup/dcrios/pull/556) and [improved](https://github.com/raedahgroup/dcrios/pull/555) menu rendering. 
+UI enhancements continue with updated [colors](https://github.com/raedahgroup/dcrios/pull/556) and [improved](https://github.com/raedahgroup/dcrios/pull/555) menu rendering.
 
-Work continues on [multi-wallet](https://github.com/raedahgroup/dcrios/pull/558) support, revamped UI for [send](https://github.com/raedahgroup/dcrios/pull/557) and [receive](https://github.com/raedahgroup/dcrios/pull/553) views.
+Work continues on [multi-wallet](https://github.com/raedahgroup/dcrios/pull/558) support, and revamped UI for [send](https://github.com/raedahgroup/dcrios/pull/557) and [receive](https://github.com/raedahgroup/dcrios/pull/553) views.
 
-[dcrdata](https://github.com/decred/dcrdata): Merged CSPP initial [mix detection](https://github.com/decred/dcrdata/pull/1610), bug fixes and code maintenance.
+[dcrdata](https://github.com/decred/dcrdata): Merged initial CSPP [mix detection](https://github.com/decred/dcrdata/pull/1610), bug fixes and code maintenance.
 
 [tinydecred](https://github.com/decred/tinydecred):
 
 - added display of current agendas and a menu to set [vote choice](https://github.com/decred/tinydecred/pull/25)
-- automated code formatting with [Black](https://github.com/decred/tinydecred/pull/27)
+- automated code formatting with the [Black](https://github.com/decred/tinydecred/pull/27) tool
 - bug fixes and test improvements
 
 [docs](https://github.com/decred/dcrdocs):
 
 Docs [updated](https://github.com/decred/dcrdocs/pull/1005) for v1.5 release. Warning about scam airdrops [added](https://github.com/decred/dcrdocs/pull/1035). [Forking terms](https://github.com/decred/dcrdocs/pull/1018) added to Glossary.
 
-[decred.org](https://github.com/decred/dcrweb):
-
-Minor updates, dependency upgrades.
+[decred.org](https://github.com/decred/dcrweb): Minor content updates, dependency upgrades.
 
 Other:
 
-- @degeri [released](https://twitter.com/degeri_crypto/status/1206639882485075968) site compromise notifier called [DownloadHawk](https://github.com/degeri/DownloadHawk).
-- As a [reminder](https://twitter.com/decredproject/status/1208067535532437511): security researchers can earn up to $25K for finding security issues in Decred software. Details at [bounty.decred.org](https://bounty.decred.org/).
+- @degeri [released](https://twitter.com/degeri_crypto/status/1206639882485075968) site compromise notifier called [DownloadHawk](https://github.com/degeri/DownloadHawk), which watches the Decred downloads and raises the alarm if they're tampered with.
+- As a [reminder](https://twitter.com/decredproject/status/1208067535532437511), security researchers can earn up to $25K for finding security issues in Decred software. Details at [bounty.decred.org](https://bounty.decred.org/).
 
 Dev activity stats for December: 41 active PRs, 242 master commits, 55K added and 45K deleted lines spread across 15 repositories. Contributions came from 1-5 developers per repository.
 
 ## People
 
-Welcome to new first time contributors with code merged to master: vdg0 ([tinydecred](https://github.com/decred/tinydecred/commits?author=vdg0)).
+Welcome to new first time contributor with code merged to master: vdg0 ([tinydecred](https://github.com/decred/tinydecred/commits?author=vdg0)).
 
 Congratulations to the contributor listed on [decred.org](https://decred.org/contributors/):
 
@@ -123,7 +120,6 @@ Congratulations to the contributor listed on [decred.org](https://decred.org/con
 
 Community stats as of Jan 3:
 
-- Politeia users: {} (+{})
 - Twitter followers: 40,897 (+256)
 - Reddit subscribers: 9,708 (+5)
 - Matrix users: 504 (+30)
@@ -139,29 +135,30 @@ Community stats as of Jan 3:
 
 In December the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 14,406 DCR and spent 10,106 DCR. Using December's daily average DCR/USD rate of $18.32, this is $264K received and $185K spent. At November's average daily rate of $19.97, the USD figure billed for work completed in that month is $202K. As of Jan 1, Treasury balance is 643,836 DCR (10.9 million USD at $16.87).
 
-December was an unusually quiet month for Politeia, with no new proposals submitted. Two proposals from November were voted on in December. The [TinyDecred budget](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451) proposal was approved with 85% approval and voter participation of 32.6%. The [PlusBit POS App](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605) was rejected with 39% approval and participation of 30.6%.
+December was an unusually quiet month for Politeia, with no new proposals submitted. Two proposals from November were voted on in December:
 
-Following analysis of the public orderbooks which raised questions about the level of liquidity provision, i2 Trading have provided full trading history logs that will allow for their performance to be scrutinized in detail. Company 0 are working on a set of tools for auditing i2's performance in relation to the criteria specified in their proposal.
+- The [TinyDecred budget](https://proposals.decred.org/proposals/ad0f9688b3467734e2581604914b2cc32c6eb7991dff460eff41d21f66d88451) proposal was approved with 85% approval and voter participation of 32.6%.
+- The [PlusBit POS App](https://proposals.decred.org/proposals/e559188b0febcab29c49c1f7dd5c66645e31be00894a150ef7d0b8ceb6486605) was rejected with 39% approval and participation of 30.6%.
+
+Following [analysis](https://www.blockcommons.red/publication/mm-tracking-1/) of the public orderbooks which raised questions about the level of liquidity provision, i2 Trading have provided full trading history logs that will allow for their performance to be scrutinized in detail. Company 0 are working on a set of tools for auditing i2's performance in relation to the criteria specified in their proposal.
 
 Politeia Digest has been taking a break while the level of Politeia activity is low, it will return when new proposals are submitted.
 
 ## Network
 
-Hashrate: December's hashrate opened at ~370 Ph/s and closed ~400 Ph/s, bottoming at 275 Ph/s and peaking at 522 Ph/s throughout the month. Pool hashrate distribution as of Jan 2: Poolin 31.7%, UUPool 24%, lab.antpool.com 11.9%, F2Pool 2.2%, BTC.com 1.8%, BeePool 0.09%, CoinMine 0.09%, suprnova 0.02%, Luxor 0.02% and others 28% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
+Hashrate: December's hashrate opened at ~370 Ph/s and closed ~400 Ph/s, bottoming at 275 Ph/s and peaking at 522 Ph/s throughout the month. Pool hashrate distribution as of Jan 2: Poolin 32%, UUPool 24%, lab.antpool.com 12%, F2Pool 2.2%, BTC.com 1.8%, BeePool 0.09%, CoinMine 0.09%, suprnova 0.02%, Luxor 0.02% and others 28% per [dcrstats.com](https://dcrstats.com/pow). Pool distribution numbers are approximate and cannot be accurately determined.
 
-After staying between 400-450 Ph/s in November, in December the hashrate declined futher and briefly went below 300 Ph/s (last time it touched this level during a short dip in Apr 2018).
+After staying between 400-450 Ph/s in November, in December the hashrate declined futher and briefly went below 300 Ph/s (last time it visited this level during a short dip in Apr 2019).
 
 Staking: 30-day average ticket price was 137.5 DCR (+2.7) per dcrstats.com. The price varied between 123.1-158.76 DCR. Locked amount was 5.37-5.61 million DCR, which corresponded to 49.75-51.90% of the available supply.
 
 Once again the ticket price made a new high of 158.76 since the sdiff algorithm change, while 51.9% is the new all-time high of stake participation.
 
-Nodes: Throughout [December](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1575158400000&to=1577836799000) there was an average of 175 public listening nodes and 391 normal nodes per dcr.farm. Version distribution: 56% use dcrd v1.4, 10% use dcrd v1.5, 8.8% use dcrd v1.5 dev and RC builds, 6% use dcrwallet v1.4, 1.9% use dcrwallet v1.5.
-
-Header commitments [consensus vote](https://voting.decred.org/): As of Jan 6, PoS voters upgrade phase is completed (>75% voters upgraded) while PoW miners are at 82% of 95%.
+Nodes: Throughout [December](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1575158400000&to=1577836800000) there was an average of 175 public listening nodes and 391 normal nodes per dcr.farm. On average, versions were distributed as: 56% use dcrd v1.4, 10% use dcrd v1.5, 8.8% use dcrd v1.5 dev and RC builds, 6% use dcrwallet v1.4, 1.9% use dcrwallet v1.5.
 
 On [Dec 12](https://twitter.com/lefebvre_dustin/status/1205224368407748616), 16.1% of all DCR in circulation participated in CoinShuffle++ mixing.
 
-Decred mainnet [LN map](https://ln-map.jamieholdstock.com/) shows 7 nodes and 7 channels as of Jan 7.
+Decred mainnet [LN map](https://ln-map.jamieholdstock.com/) shows 11 nodes and 13 channels as of Jan 8.
 
 ## Integrations
 
@@ -173,9 +170,9 @@ Warning: the authors of Decred Journal have no idea about the trustworthiness of
 
 ## Outreach
 
-Outreach in December features RC 1.5.0, with @davecgh educating about consensus changes on both [Decred Assembly](https://www.youtube.com/watch?v=gGQuY0kOt7g) and [Decred in Depth](https://www.youtube.com/watch?v=D1527JwkDrs). The additional eposodes of [Decred in Depth](https://www.youtube.com/watch?v=dZeqrQpf-aU) and [Decred Assembly](https://www.youtube.com/watch?v=N3WO5YXpD7M) featured @matheusd on Lightning Network. The copy for the new website was put into GitHub and submitted to the #web\_ops team in Matrix for assembly. The new site is expected to publish in January.
+Outreach in December featured v1.5.0 RC, with @davecgh educating about consensus changes on both [Decred Assembly](https://www.youtube.com/watch?v=gGQuY0kOt7g) and [Decred in Depth](https://www.youtube.com/watch?v=D1527JwkDrs). The additional eposodes of [Decred in Depth](https://www.youtube.com/watch?v=dZeqrQpf-aU) and [Decred Assembly](https://www.youtube.com/watch?v=N3WO5YXpD7M) featured @matheusd on Lightning Network. The copy for the website update was put into GitHub and submitted to the #web\_ops team for assembly. The new site is expected to publish in January.
 
-Much of the rest of the month focused on reflection, discussion, and planning for 2020. @bee's post on [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) prompted [vigorous discussion](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157617150861861VoZeT:decred.org) in #proposals, as Ditto and @Dustorf look to prepare their next proposals. @Dustorf followed up with [a survey](https://www.surveymonkey.com/results/SM-9JRDSMFS7/) soliticing community input on priorities regarding geographies, market segments, and possible applications. He will also publish a summary of marketing expenditures prior to his next proposal. 
+Much of the rest of the month focused on reflection, discussion, and planning for 2020. @bee's post on [marketing strategies](https://xaur.github.io/writings/posts/20191127-marketing-strategies.html) prompted [vigorous discussion](https://matrix.to/#/!MIGqWXfLFBwhipPKYL:decred.org/$157617150861861VoZeT:decred.org) in #proposals, as Ditto and @Dustorf look to prepare their next proposals. @Dustorf followed up with [a survey](https://www.surveymonkey.com/results/SM-9JRDSMFS7/) soliticing community input on priorities regarding geographies, market segments, and possible applications. He will also publish a summary of marketing expenditures prior to his next proposal.
 
 Ditto's December achievements:
 
@@ -197,7 +194,7 @@ Attended:
 - Nov 6 - [Bitcoin & Blockchains Meetup](https://www.facebook.com/events/1444182132424731/) - Oaxaca, Mexico. @evok3d represented Decred. ([photos](https://twitter.com/ev0k3d/status/1192945388329807874), _missed in Nov_)
 - Dec 4 - [Decred Demo](https://www.meetup.com/blockchaincentre/events/266659342/) - Melbourne, Australia. @eSizeDave and @zohand were invited to present Decred at Blockchain Centre's newly introduced Talk & Trade format. The demo of Politeia and Decrediton was expected to take 30 minutes but the total time surpassed 1.5 hours, which allowed to talk about key aspects of Decred and have a debate among the ~20 participants. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191204-blockchain-centre-talk-and-trade-melbourne-australia.md))
 - Dec 7 - Blockchain Communities Meetup - Mexico City, Mexico. Organized by Blockchain Bajio at Bitcoin Embassy Bar. (photos: [1](https://twitter.com/Decred_ES/status/1204144823231488000), [2](https://twitter.com/BlockchainBajio/status/1209141039086362624), [3](https://twitter.com/NancyNSalazar/status/1209143989984808961))
-- Dec 12-13 - [Labitconf](https://www.labitconf.com/) - Montevideo, Uruguay. A team of 7 Decred Latam ambassadors represented the project during 2 days of the event. Previous efforts to build awareness in Latam became evident as many projects attending the event knew about Decred. Having no booth in a single place allowed the team to be everywhere, and they suggest to consider this approach for events of this size (~1000 visitors). Check the [full report](https://github.com/decredcommunity/events/blob/master/reports/20191212-labitconf-montevideo-uruguay.md) for notable interactions and other details.
+- Dec 12-13 - [Labitconf](https://www.labitconf.com/) - Montevideo, Uruguay. Decred Latam team of 7 people represented the project during 2 days of the event. Previous efforts to build awareness in Latam became evident as many projects attending the event knew about Decred. Having no booth in a single place allowed the team to be everywhere, and they suggest to consider this approach for events of this size (~1000 visitors). Check the [full report](https://github.com/decredcommunity/events/blob/master/reports/20191212-labitconf-montevideo-uruguay.md) for notable interactions and other details.
 - Dec 15 - [Crypto & Christmas](https://www.meetup.com/blockchaincentre/events/267037974/) - Melbourne, Australia. Decred Australia organized a party together with Blockchain Centre, Cointree and e-Pocket. @eSizeDave and @zohand gave a brief intro to Decred and its achievements to ~20 attendees and used the opportunity to engage with them more directly. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191215-crypto-and-christmas-melbourne-australia.md))
 - Dec 20 - [Bitcoin Embassy Anniversary](https://twitter.com/Decred_ES/status/1207380289107959809) - Mexico City, Mexico. Bitcoin Embassy invited Decred Latam team to be present and sponsor the event, thanks to good relationships established earlier. @francov\_, @victorarubin and @luisantoniocrag talked all night about Decred with most of the attendees. ([report](https://github.com/decredcommunity/events/blob/master/reports/20191220-bitcoin-embassy-anniversary-mexico-city-mexico.md))
 
@@ -205,7 +202,7 @@ Upcoming:
 
 - Jan 29-31 - [Crypto 101 Online Summit](https://www.crypto2020summit.com/) - online. @lukebp will give an overview of Decred's plans for 2020.
 - Apr 13-17 - Blockchain Land at Talent Land - Guadalajara, Mexico. Decred will be sponsor of Talent Land and be present with a booth at Blockchain Land.
-- May, date TBA - [BitConf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil. The event was moved to May 2020.
+- May, date TBA - [BitConf](https://www.bitconf.com.br/portal/) - São Paulo, Brazil.
 
 ## Media
 
@@ -226,17 +223,17 @@ Translations:
 Videos:
 
 - Decred Assembly Deep Dive - Lightning Network with @matheusd ([youtube](https://www.youtube.com/watch?v=N3WO5YXpD7M))
-- TradeTalks: Blockchain & Emerging Technologies in Africa. Jill Malandrino and Akin Sawyerr discuss emerging technology in Africa. ([nasdaq.com](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa))
+- TradeTalks: Blockchain & Emerging Technologies in Africa. @akinsawyerr talks about the importance of governance crypto's prospect in Africa. ([nasdaq.com](https://www.nasdaq.com/videos/tradetalks%3A-blockchain-emerging-technologies-in-africa))
 
 Audio:
 
 - POV Crypto 105 - Fight Night XI: BTC vs ETH vs DCR, with @Checkmate. An in depth debate of the Bitcoin, Ethereum and Decred perspectives on a variety of blockchain subjects. ([youtube](https://www.youtube.com/watch?v=7m1kfM0fqaE))
 - Decred in Depth Ep. 15 features @davecgh giving an in depth overview of v1.5 and the block header commitments consensus rule change proposal. Dave covers the detail of what the proposal involves, and the ways in which it will enhance the network if approved. ([youtube](https://www.youtube.com/watch?v=D1527JwkDrs), [soundcloud](https://soundcloud.com/decredindepth/ep-15-dave-collins-btc-suite-origins-dcrd-15))
-- Decred in Depth Ep. 14 - @matheusd talks about getting into Lightning Network development through his work on ticket-splitting, the challenges of porting Lightning Labs lnd to Decred, and the various ways in which the basis in btcd helps. ([youtube](https://www.youtube.com/watch?v=dZeqrQpf-aU), [soundcloud](https://soundcloud.com/decredindepth/ep-14-matheus-degiovani-dcr-lightning-network))
-- Off the Chain - How Crypto is Bridging the Gap Between the Banked and Unbanked - @akinsawyerr has an extensive interview with Anthony Pompliano about cryptocurrency and Africa. ([youtube](https://www.youtube.com/watch?v=NNg5G_EZxtU), [spotify](https://open.spotify.com/episode/1FGOnQb84YpGTZfwbEzdAg))
+- Decred in Depth Ep. 14 - @matheusd talks about getting into Lightning Network development through his work on ticket-splitting, the challenges of porting Lightning Labs' lnd to Decred, and the various ways in which the basis in btcd helps. ([youtube](https://www.youtube.com/watch?v=dZeqrQpf-aU), [soundcloud](https://soundcloud.com/decredindepth/ep-14-matheus-degiovani-dcr-lightning-network))
+- Off the Chain - How Crypto is Bridging the Gap Between the Banked and Unbanked. @akinsawyerr has an extensive interview with Anthony Pompliano about cryptocurrency and Africa. ([youtube](https://www.youtube.com/watch?v=NNg5G_EZxtU), [spotify](https://open.spotify.com/episode/1FGOnQb84YpGTZfwbEzdAg))
 - Cigars and Crypto 73 - @akinsawyerr talks about Africa and Decred. ([anchor.fm](https://anchor.fm/investnoir3/episodes/Episode-73---AkinSawyerr-e9pnmu))
 
-Decred bullish sentiment hit a yearly hign, according to [LunarCRUSH](https://twitter.com/LunarCRUSH/status/1208975910013026304).
+Decred bullish sentiment hit a yearly high, according to [LunarCRUSH](https://twitter.com/LunarCRUSH/status/1208975910013026304).
 
 @AGNFAB1 posted [more](https://www.reddit.com/r/decred/comments/eevd8f/decred/) of his Decred art. Previous works: [Christmas](https://twitter.com/AGNFAB1/status/1208044700634157056), [Banking on Decred](https://twitter.com/AGNFAB1/status/1199788339404181504), [Tacotime Trilogy](https://www.reddit.com/r/Monero/comments/dzh6vr/tacotime_trilogy/), [Decentralized Credits](https://www.reddit.com/r/decred/comments/dqocpf/decentralized_credits/).
 
@@ -249,7 +246,6 @@ Selected Reddit posts:
 
 Selected Twitter action:
 
-- Bug [Bounty](https://twitter.com/decredproject/status/1208067535532437511) hunters, check out v1.5.
 - A @decredproject [poll](https://twitter.com/decredproject/status/1207060170855141376) asking about the most noteworthy achievement of 2019 had 475 responses. 37% went for Privacy, 33% for Politeia/DAO, 19% for Lightning Network and 11% for DEX.
 - Merry [Stakemas](https://twitter.com/DCRComic/status/1209541923737886721) from @DCRComic.
 - @buck54321's [campaign](https://twitter.com/blockchainbuck/status/1201988834575224832) for the TinyDecred proposal targeted older voters.
@@ -293,9 +289,9 @@ The Zcash Foundation decided to develop option #12 with some improvements, then 
 
 The Zcash Foundation also [donated](https://www.coindesk.com/zcash-foundation-funds-app-mixing-private-messaging-and-payments) $40,000 to Open Privacy for development of [Cwtch](https://openprivacy.ca/work/cwtch/), a decentralized messaging and payments platform.
 
-IOTA got itself in a tangle and was [halted](https://cryptobriefing.com/iota-halts-15-hours-from-coordinator-bug/) for 15 hours due to a bug with the Coordinator. 
+IOTA got itself in a tangle and was [halted](https://cryptobriefing.com/iota-halts-15-hours-from-coordinator-bug/) for 15 hours due to a bug with the Coordinator.
 
-Jack Dorsey of Twitter [announced](https://twitter.com/jack/status/1204766078468911106) that Twitter would fund research into a decentralized version of its platform. 
+Jack Dorsey of Twitter [announced](https://twitter.com/jack/status/1204766078468911106) that Twitter would fund research into a decentralized version of its platform.
 
 Moocowmoo, a Dash Core advisor and provider of a custodial master node shares service, [disappeared](https://bitcoinist.com/making-a-dash-for-it-moocowmoo-disappears/) while in the process of winding down the service, leaving some clients waiting for their DASH back for an extended period. After the increase in attention, Moocowmoo re-surfaced and the DASH [began](https://bitcoinist.com/dash-investors-funds-returned-moocowmoo-awakes/) to flow back to its rightful owners within a week.
 
